--- a/src/components/ItemList/item-list.css
+++ b/src/components/ItemList/item-list.css
@@ -1,5 +1,9 @@
+.item-list {
+  margin-bottom: 2rem;
+}
 .item-list .list-group-item {
   cursor: pointer;
+  
 }
 
 .item-list .list-group-item:hover {
